# DigitalBalanceAtHome

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  openapi.yaml  requirements.txt
server/: .env.example  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 083b99406853_add_activities_table_with_seed_data.py  0939c91dc10f_add_group_tables.py  696ba745d257_remove_family_role.py  c76f0473bee1_add_users_table.py  d1d1fba86cde_add_challenges_and_completions_tables.py  fbb22b7d05c1_add_consent_family_child_tables.py
server/app/: main.py
server/app/api/: activities.py  auth.py  challenges.py  children.py  completions.py  consents.py  dev.py  families.py  groups.py  health.py  photos.py  users.py
server/app/core/: config.py  database.py  rate_limit.py  storage.py
server/app/dependencies/: auth.py
server/app/models/: __init__.py  activity.py  base.py  challenge.py  child_profile.py  completion.py  consent.py  family.py  group.py  user.py
server/app/repositories/: activity.py  challenge.py  child_profile.py  completion.py  consent.py  family.py  group.py  user.py
server/app/schemas/: generated.py
server/app/services/: activity.py  auth.py  challenge.py  child_profile.py  completion.py  consent.py  exceptions.py  family.py  group.py  seed.py  user.py
server/scripts/: seed_dev.py
server/tests/: conftest.py
server/tests/integration/: test_auth_routes.py  test_child_routes.py  (+4 more)
(+104 files in other folders)
